WIP: working but ugly calibration for beam splitting microscopes