@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>41.0.0</version>
+		<version>43.0.0</version>
 	</parent>
 	<repositories>
 		<!-- NB: for project parent -->
@@ -29,10 +29,12 @@
 		<license.copyrightOwners>Stephan Saalfeld and Takashi Kawasw.</license.copyrightOwners>
 
 		<!-- Java version -->
-		<!-- <maven.compiler.release>17</maven.compiler.release> -->
+		<maven.compiler.release>17</maven.compiler.release>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
+
+		<TrakEM2.version>2.0.1</TrakEM2.version>
 
 		<enforcer.skip>true</enforcer.skip>
 	</properties>
@@ -74,6 +76,39 @@
 			<groupId>ome</groupId>
 			<artifactId>formats-bsd</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>info.picocli</groupId>
+			<artifactId>picocli</artifactId>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						-Djava.awt.headless=true
+						--add-opens=java.desktop/javax.swing=ALL-UNNAMED
+						--add-opens=java.base/java.lang=ALL-UNNAMED
+						--add-opens=java.base/java.io=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<commandlineArgs>
+						-Djava.awt.headless=true
+						--add-opens=java.desktop/javax.swing=ALL-UNNAMED
+						--add-opens=java.base/java.lang=ALL-UNNAMED
+					</commandlineArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
